<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.benrh.beatpinreader.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingTop="10dp"
                android:background="@android:color/holo_orange_light"
                android:text="@string/status"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="?attr/actionMenuTextColor"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                tools:ignore="InefficientWeight,NestedWeights"
                app:layout_constraintBottom_toTopOf="@+id/spinnerDevice"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/spinnerDevice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:textAlignment="center"
                tools:ignore="NestedWeights,RtlHardcoded" />

            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/buttonBeat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/beat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonNewPin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/newPin"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/buttonRetry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/retry"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/next"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
